# cortex

./: .gitignore  CLAUDE.md  LICENSE  Makefile
apps/cortex-tui/: .gitignore  Makefile  README.md  cortex-tui.toml.example  go.mod  go.sum
apps/cortex-tui/cmd/cortex-tui/: main.go
apps/cortex-tui/internal/api/: client.go
apps/cortex-tui/internal/config/: config.go
apps/cortex-tui/internal/models/: models.go
apps/cortex-tui/internal/tui/: logger.go  model.go  project.go  query.go  styles.go
docs/: cortex-architecture.drawio  cortex-product-brief.md  cortex-product-definition-1.md  data-pipeline-architecture.md  graph-db-decision.md  know_manage_discussion.md  monorepo-structure.md  product-ideas.md  tui-design.md
docs/adrs/: adr-data-pipeline-orchestration.md
docs/ai-chats/: data-pipeline-architecture-research.md  data-pipeline-orchestration.md  embedding-discussion.md  knowledge-graph-best-practices.md  tui_languages_rust_go_python.md  uv-pdm-comparison.md
docs/notes/: queryview-refactor.txt
pipelines/: .env.example  .gitignore  .pdm-python  DEPLOYMENT_MODES.md  Makefile  QUICKSTART.md  README.md  __init__.py  pyproject.toml
pipelines-old/: DEVELOPMENT.md  Makefile  README.md  pyproject.toml
pipelines-old/catalog/: __init__.py  duckdb_manager.py
pipelines-old/configs/runtime/: local.yaml
pipelines-old/connectors/: __init__.py  base.py
pipelines-old/infra/: docker-compose.yml  init-postgres.sh
pipelines-old/orchestration/: __init__.py  assets.py  definitions.py  resources.py
pipelines-old/orchestration/a/: abc.py
pipelines-old/orchestration/b/: xyz.py
pipelines-old/samples/sample_docs/: meeting_notes.md  project_overview.md
pipelines-old/samples/watch/file_drop/: f.txt
pipelines-old/sdk/: client.py  duckdb_helpers.py
pipelines/.dagster/: dagster.yaml
pipelines/catalog/: duckdb_manager.py  init_iceberg.py
pipelines/configs/sources/: file_drop.yaml
pipelines/connectors/: file_drop.py
pipelines/infra/: .env.example  Dockerfile.dagster  Dockerfile.user_code  docker-compose.yml  init-postgres.sh  marquez.yml
pipelines/orchestration/: assets.py  dagster.yaml  definitions.py  sensors.py  workspace.docker.yaml  workspace.hybrid.yaml  workspace.local.yaml  workspace.py  workspace.yaml
pipelines/samples/sample_docs/: README.md  technical_spec.txt
pipelines/sdk/: __init__.py  client.py  duckdb_helpers.py
pipelines/src/pipelines/: definitions.py
pipelines/src/pipelines/defs/: assets.py  resources.py  sensors.py  types.py
