[project]
name = "cortex-pipeline"
version = "0.1.0"
description = "Cortex data pipeline for ingestion, transformation, and knowledge graph population"
authors = [
    {name = "Cortex Team"}
]
requires-python = ">=3.12"
# readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Orchestration
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "dagster-postgres>=0.22.0",
    "dagster-duckdb>=0.22.0",

    # Data processing
    "duckdb>=0.10.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",

    # Storage clients
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",

    # Database
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.0",

    # Text processing
    "puremagic>=1.30",
    "chardet>=5.2.0",

    # Lineage and observability
    "openlineage-python>=1.7.0",
    "openlineage-dagster>=1.7.0",

    # Configuration
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",

    # Utilities
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"
