[project]
name = "pipelines"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "boto3>=1.40.75",
    "dagster>=1.12.2,<2.0.0",
    "dagster-postgres",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "pipelines"
registry_modules = [
    "pipelines.components.*",
]

[tool.ruff.lint]
select=["I"]
